--- a/JazAndSeanSATProject.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/JazAndSeanSATProject.UI.MVC/Views/Shared/_Layout.cshtml
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>SB Admin 2 - Dashboard</title>
+    <title>Catitudes Enrollment Service</title>
     <!-- Custom fonts for this template-->
     <link href="~/Content/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
+    <link href="~/Content/img/favicon-16x16.png" rel="icon" type="image/x-icon"/>
     <!-- Custom styles for this template-->
     <link href="//cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="~/Content/css/sb-admin-2.min.css" rel="stylesheet">
